# chazelle-triangulation

./: .gitignore  CMakeLists.txt  PLAN.md
papers/: chazelle1991-transcribed.tex  fournier-montuno-transcribed.tex  lipton-tarjan1979-transcribed.tex
src/: common.h  main.cpp
src/chazelle/: conformality.cpp  conformality.h  down_phase.cpp  down_phase.h  fusion.cpp  fusion.h  grade_storage.cpp  grade_storage.h  granularity.cpp  granularity.h  merge.cpp  merge.h  up_phase.cpp  up_phase.h
src/geometry/: edge.h  perturbation.h  point.h  polygon.cpp  polygon.h
src/oracles/: arc_cutting.cpp  arc_cutting.h  ray_shooting.cpp  ray_shooting.h
src/separator/: planar_graph.cpp  planar_graph.h  separator.cpp  separator.h
src/triangulate/: convert.cpp  convert.h  monotone.cpp  monotone.h  trapezoid.h  triangulate.cpp  triangulate.h  vertex_node.h
src/visibility/: arc_structure.h  chord.h  submap.cpp  submap.h  tree_decomposition.cpp  tree_decomposition.h
tests/: test_fm.cpp  test_geometry.cpp  test_integration.cpp  test_separator.cpp  test_triangulate.cpp
